crates/swc_ecma_react_compiler/tests/fixtures/upstream/rules-of-hooks/error.invalid-rules-of-hooks-9718e30b856c/error.txt
Found 1 error:

Error: Hooks must always be called in a consistent order, and may not be called conditionally. See the Rules of Hooks (https://react.dev/warnings/invalid-hook-call-warning)

error.invalid-rules-of-hooks-9718e30b856c.ts:12:2
  10 |     console.log('false');
  11 |   }
> 12 |   useState();
     |   ^^^^^^^^ Hooks must always be called in a consistent order, and may not be called conditionally. See the Rules of Hooks (https://react.dev/warnings/invalid-hook-call-warning)
  13 | }
  14 |
